# faserTracker

./: .gitmodules  CMakeLists.txt  README.md  find_tracks.cc  make.sh  make_faser_tracker.sh  setUpEnvironment.sh  set_up_environment.sh  settings.json
faserTracker/: CMakeLists.txt  settings.json
faserTracker/include/FaserTracker/: Settings.hh  TrackCandidate.hh  TrackFinder.hh  TrackFitter.hh
faserTracker/src/: Settings.cc  TrackFitter.cc
faserTracker/util/: CMakeLists.txt  findTracks.cc  helix_2particle.cc  helix_tracker.cc  helix_validation.cc  plot_space_points.cc  plot_truth.cc  printTruth.cc  sp_separation.cc  validateDigi.cc
faser_tracker/: CMakeLists.txt  settings.json
faser_tracker/include/: FaserRootClasses.hh  FaserSensorHit.hh
faser_tracker/include/FaserTracker/: DigiClusterFinder.hh  FittedTrack.hh  IO.hh  Plots.hh  Settings.hh  TrackCandidate.hh  TrackFinder.hh  TrackFitter.hh  TrackingGeometry.hh  common_includes.hh
faser_tracker/src/: Digit.cc  FaserSensorHit.cc  FittedTrack.cc  HitInfo.cc  IO.cc  Plots.cc  Settings.cc  TestTrackFit.cc  TrackCandidate.cc  TrackFinder.cc  TrackFitter.cc  TrackingGeometry.cc
faser_tracker/util/: CMakeLists.txt  find_tracks.cc  fit_tracks.cc  plot_space_points.cc
include/: common_includes.hh
include/FaserTracker/: Debugger.hh  Detector.hh  DigiCluster.hh  DigiClusterFinder.hh  DigiReader.hh  Digit.hh  HitInfo.hh  Plots.hh  Settings.hh  TestTrackFit.hh  TrackCandidate.hh  TrackFinder.hh  TrackFit.hh  TrackInfo.hh  common_includes.hh
src/: Detector.cc  DigiCluster.cc  DigiClusterFinder.cc  DigiReader.cc  HitInfo.cc  Plots.cc  Settings.cc  TrackFinder.cc  TrackFit.cc
